--- a/default_error.html
+++ b/default_error.html
@@ -6,11 +6,11 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>ERROR</title>
+        <title>TODO supply a title</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div>Erro: página não encontrada.</div>
+        <div>Opss! Page not found.</div>
     </body>
 </html>
